mark open as critical